--- a/404-not-found/index.html
+++ b/404-not-found/index.html
@@ -5,6 +5,21 @@
     <title>404 NOT FOUND</title>
 </head>
 <body>
-NOT FOUND
+<header class="header">
+    <h1 class="title">NOT FOUND</h1>
+</header>
+<main class="main">
+    <section class="main__image">
+        <img src="./img/Scarecrow.png" alt="">
+    </section>
+    <section class="main__message">
+        <h2 class="main__header">I have bad news for you</h2>
+        <p class="main__text">The page you are looking for might be removed or is temporarily unavailable</p>
+        <button class="main__button">BACK TO HOMEPAGE</button>
+    </section>
+</main>
+<footer class="footer">
+    <p class="footer__text">linotype30 @ devchallenges.io</p>
+</footer>
 </body>
 </html>
